sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:3: error: not found: value ecart
  ecart = getNombreValeurs()
  ^AlgCombSort:4: error: not found: value ecart
  while (ecart>1 || i!=0){
         ^AlgCombSort:4: error: not found: value i
  while (ecart>1 || i!=0){
                    ^AlgCombSort:5: error: not found: value ecart
    if (ecart>1) {
        ^AlgCombSort:6: error: not found: value ecart
      ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
      ^AlgCombSort:8: error: not found: value i
    i=0
    ^AlgCombSort:9: error: not found: value i
    while (i+ecart < getNombreValeurs) {
           ^AlgCombSort:9: error: not found: value ecart
    while (i+ecart < getNombreValeurs) {
             ^AlgCombSort:10: error: not found: value i
      if (plusPetit(i,i+ecart)) {
                    ^AlgCombSort:10: error: not found: value i
      if (plusPetit(i,i+ecart)) {
                      ^AlgCombSort:10: error: not found: value ecart
      if (plusPetit(i,i+ecart)) {
                        ^AlgCombSort:11: error: not found: value i
        echange(i,i+1); i = i + 1;
                ^AlgCombSort:11: error: not found: value i
        echange(i,i+1); i = i + 1;
                  ^AlgCombSort:11: error: not found: value i
        echange(i,i+1); i = i + 1;
                        ^