sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  ecart = getNombreValeurs()
  while (ecart>1 || i!=0){
    if (ecart>1) {
    	ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
  	}
  	i=0
  	while (i+ecart < getNombreValeurs) {
    	if (plusPetit(i,i+ecart)) {
      	echange(i,i+1); i = i + 1;
    	}
  	}
  }
}

